<resources>
    <string name="app_name" translatable="false">Sushi App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account_register">Don’t have an account, Register?</string>
    <string name="don_t_have_an_account">Don’t have an account,</string>
    <string name="register" translatable="false">Register</string>
    <string name="is_register" translatable="false">Register?</string>
    <string name="phone_number" translatable="false">Phone Number</string>
    <string name="already_have_an_account">Already have an account,</string>
    <string name="sign_in" translatable="false">Sign in?</string>
    <string name="e_mail" translatable="false">E-Mail</string>
    <string name="sign_in_now" translatable="false">Sign In Now</string>
    <string name="register_now">Register Now</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="menu">Menu</string>
    <string name="restaurant">Restaurant</string>
    <string name="favorites">Favorites</string>
    <string name="my_cart">My Cart</string>
    <string name="my_account">My Account</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>