<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".RegisterFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:scaleType="fitXY"
        android:src="@drawable/selective_color_1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_25sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/calibri"
        android:gravity="end"
        android:lineSpacingMultiplier="0.93"
        android:textColor="#322e2b"
        android:textSize="@dimen/_28ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        tools:text=" Sign In !" />
</androidx.constraintlayout.widget.ConstraintLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    android:layout_weight="1"
    android:weightSum="4">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/calibri_light"
        android:gravity="center_horizontal"
        android:textColor="@color/warm_grey"
        android:textStyle="normal"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/warm_grey"
        app:boxStrokeWidth="4dp"
        app:startIconDrawable="@drawable/account">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_userName_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textSize="@dimen/_22ssp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/calibri_light"
        android:gravity="center_horizontal"
        android:textColor="@color/warm_grey"
        android:textStyle="normal"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/warm_grey"
        app:boxStrokeWidth="4dp"
        app:startIconDrawable="@drawable/ic_envelope">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_eMail_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"
            android:hint="@string/e_mail"
            android:textSize="@dimen/_22ssp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/calibri_light"
        android:gravity="center_horizontal"
        android:textColor="@color/warm_grey"
        android:textStyle="normal"
        app:endIconMode="password_toggle"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/warm_grey"
        app:boxStrokeWidth="4dp"
        app:startIconDrawable="@drawable/ic_padlock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_passWord_edtText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="@dimen/_22ssp"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/calibri_light"
        android:gravity="center_horizontal"
        android:textColor="@color/warm_grey"
        android:textStyle="normal"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/warm_grey"
        app:boxStrokeWidth="4dp"
        app:startIconDrawable="@drawable/ic_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_phone_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:textSize="@dimen/_22ssp"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn"
            style="@style/TextStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/gradient_btn_bg"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:paddingStart="@dimen/_70sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_70sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="@dimen/_16ssp"
            android:textStyle="normal"
            app:backgroundTint="@null"
            app:cornerRadius="@dimen/_30sdp"
            tools:text="Register Now" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:paddingStart="@dimen/_40sdp"
            android:paddingEnd="@dimen/_40sdp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/orText"
                android:background="@color/light_orange" />

            <TextView
                android:id="@+id/orText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:text="OR"
                android:textColor="@color/light_orange" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/orText"
                android:background="@color/light_orange" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageButton
                android:id="@+id/registerGoogle_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_65sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_weight="1"
                android:background="@color/white"
                android:padding="@dimen/_10sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/google" />

            <ImageButton
                android:id="@+id/registerFaceBook_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_65sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_weight="1"
                android:background="@color/white"
                android:padding="@dimen/_10sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/facebook" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="@color/warm_grey"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:paddingTop="@dimen/_15sdp"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>